Sun Aug  8 16:42:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rubygems.rb (Gem.find_files): reverted to use globbing.

	* lib/rubygems.rb (Gem.find_files): fixed search order same as
	  default behavior.

	* gem_prelude.rb, lib/rubygems.rb (Gem.suffixes): return truely
	  require-able suffixes only.

Sun Aug  8 13:20:57 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_ftype): Pathname#ftype translated
	  from pathname.rb.

Sun Aug  8 12:41:19 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_escape): no similar messages twice.
	  [ruby-core:31048]

Sun Aug  8 10:07:45 2010  Tanaka Akira  <akr@fsij.org>

	* strftime.c (rb_strftime_with_timespec): suppress warnings.

Sun Aug  8 08:58:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (RUBY_H_INCLUDES): add subst.h.

Sun Aug  8 08:55:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ruby_snprintf): printf attribute. 

Sun Aug  8 07:47:29 2010  Tanaka Akira  <akr@fsij.org>

	* lib/rbconfig/obsolete.rb: show the location which use Config.

Sun Aug  8 07:29:55 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_fnmatch): Pathname#fnmatch and
	  Pathname#fnmatch? translated from pathname.rb.

Sun Aug  8 07:18:22 2010  Tanaka Akira  <akr@fsij.org>

	* include/ruby/subst.h (snprintf): redefinition moved from ruby.h.
	  (vsnprintf): ditto.

Sun Aug  8 00:41:42 2010  Tanaka Akira  <akr@fsij.org>

	* include/ruby/subst.h: new file for substitute standard functions..

	* include/ruby/missing.h: don't substitute "close", etc. here.

	* include/ruby/ruby.h: include ruby/subst.h at last.
	  This prevents substituting "close" in unitstd.h.

Sat Aug  7 19:51:10 2010  Tanaka Akira  <akr@fsij.org>

	* test/ruby/envutil.rb (EnvUtil.invoke_ruby): merge stdout and stderr
	  if capture_stderr is :merge_to_stdout.
	  (assert_normal_exit): print abnormal output propery.

Sat Aug  7 19:04:49 2010  Tanaka Akira  <akr@fsij.org>
