@@ -1,3 +1,8 @@
+Sun Aug  8 19:16:26 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/pathname/pathname.c (path_make_link): Pathname#make_link
+	  translated from pathname.rb.
+
 Sun Aug  8 16:42:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rubygems.rb (Gem.find_files): reverted to use globbing.
